...

    if (error.isNotEmpty()) {
        ErrorColumn(error = error)
    } else {
        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier.testTag("detail_properti_screen")
        ) {
            item {
                ImageCarousel(
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("image_carousel"),
                    imagesUrl = property.photosUrl
                )
            } // Image Carousel
            item {
                Row(
                    horizontalArrangement = Arrangement.spacedBy(14.dp),
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 24.dp)
                        .testTag("label")
                ) {
                    IconTextBadge(
                        text = property.type,
                        icon = R.drawable.ic_house,
                        color = Blue500
                    )
...
                    text = property.address,
                    iconTint = Red500
                )
            } // Lokasi
            item {
                HargaShare(
                    harga = property.price,
                    modifier = Modifier
                        .padding(horizontal = 24.dp)
                        .testTag("harga"),
                    onShareClick = {
                        viewModel.shareProperty(context)
                    }
...
                )
            } // Deskripsi
            item {
                Card(
                    modifier = Modifier
                        .padding(24.dp)
                        .testTag("property_attribute"),
                    shape = RoundedCornerShape(10.dp),
                    elevation = 0.dp,
                    backgroundColor = Color.Gray.copy(alpha = 0.1f),
                ) {
                    Column(
                        modifier = Modifier
...
            } // Property Attribute
            item {
                FlowRow(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 24.dp)
                        .testTag("spesifikasi"),
                    mainAxisSpacing = 14.dp,
                    crossAxisSpacing = 14.dp,
                    mainAxisAlignment = MainAxisAlignment.SpaceBetween,
                    crossAxisAlignment = FlowCrossAxisAlignment.Start,
                ) {
                    IconTextCardColumn(
...
                        text = "Virtual Tour",
                        modifier = Modifier.padding(horizontal = 24.dp),
                        style = MaterialTheme.typography.h6
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    PrimaryButton(
                        title = "Lihat Virtual Tour",
                        leadingIcon = Icons.Default.ViewInAr,
                        modifier = Modifier
                            .padding(horizontal = 24.dp)
                            .testTag("btn_virtual_tour"),
                        onClick = {
                            onVirtualTourClick(property.virtualTour)
                        }
                    )
                }
            } // Virtual Tour
...
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    YoutubePlayer(
                        videoId = property.video,
                        modifier = Modifier
                            .padding(horizontal = 24.dp)
                            .testTag("video_player")
                            .fillMaxWidth()
                    )
                }
            } // Video
            item {
                if ((property.latitude != 0.0) && (property.longitude != 0.0)) {
...
                        text = "Peta Lokasi",
                        modifier = Modifier.padding(horizontal = 24.dp),
                        style = MaterialTheme.typography.h6
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    PrimaryButton(
                        title = "Lihat Peta Lokasi",
                        leadingIcon = Icons.Default.Map,
                        modifier = Modifier
                            .padding(horizontal = 24.dp)
                            .testTag("btn_peta_lokasi"),
                        onClick = {
                            viewModel.openMap(context)
                        }
                    )
                }
            } // Peta Lokasi
...
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    FlowRow(
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(horizontal = 24.dp)
                            .testTag("fasilitas"),
                        mainAxisSpacing = 14.dp,
                        crossAxisSpacing = 14.dp,
                        mainAxisAlignment = if ((property.fasilitas?.size
                                ?: 0) > 3
                        ) MainAxisAlignment.SpaceBetween else MainAxisAlignment.Start,
                        crossAxisAlignment = FlowCrossAxisAlignment.Start,
...
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    FlowRow(
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(horizontal = 24.dp)
                            .testTag("infrastruktur"),
                        mainAxisSpacing = 14.dp,
                        crossAxisSpacing = 14.dp,
                        mainAxisAlignment = if ((property.infrastruktur?.size
                                ?: 0) > 3
                        ) MainAxisAlignment.SpaceBetween else MainAxisAlignment.Start,
                        crossAxisAlignment = FlowCrossAxisAlignment.Start,
...
                        }
                    }
                }
            } // Infrastruktur
            item {
                ContactRow(
                    modifier = Modifier.testTag("contact_row"),
                    image = property.agentImage,
                    desc = "Agen",
                    name = property.agentName,
                    phone = property.agentPhone,
                    onPhoneClick = {
                        viewModel.callNumber(context, property.agentPhone)
...
