...
    )
    if (error.isNotEmpty()) {
        ErrorColumn(error = error)
    } else {
        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier.testTag("detail_project_screen")
        ) {
            item {
                ImageCarousel(
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("image_carousel"),
...
                    modifier = Modifier.padding(horizontal = 24.dp)
                )
            } // Konsep
            item {
                if (project.listUnit.isNotEmpty()) {
                    TitleSectionText(
                        title = "Daftar Unit",
                        modifier = Modifier
                            .padding(horizontal = 24.dp)
                            .fillMaxWidth(),
                    )
                }
            } // Daftar Unit Title
...
                        text = "3D Site Plan",
                        style = MaterialTheme.typography.h6,
                        modifier = Modifier.padding(horizontal = 24.dp)
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    PrimaryButton(
                        title = "Lihat 3D Site Plan",
                        leadingIcon = Icons.Filled.Roofing,
                        modifier = Modifier
                            .padding(horizontal = 24.dp)
                            .testTag("btn_3d_siteplan"),
                        onClick = { onVirtualOrSiteplanClicked(project.site3DPlan) }
                    )
                }
            } // 3D Site Plan
            item {
                if (project.arApps.isNotEmpty()) {
...
                        text = "AR App",
                        style = MaterialTheme.typography.h6,
                        modifier = Modifier.padding(horizontal = 24.dp)
                    )
                    Spacer(modifier = Modifier.height(5.dp))
                    PrimaryButton(
                        title = "Download App",
                        leadingIcon = Icons.Filled.Download,
                        modifier = Modifier.padding(horizontal = 24.dp),
                        onClick = {
                            viewModel.downloadApps(context, project.arApps)
                        }
                    )
...
