...
                .padding(16.dp),
            verticalArrangement = Arrangement.spacedBy(8.dp)
        ) {
            SelectDropdown(
                options = proTypeOptions,
                selectedOption = selectedProType,
                label = "Tipe Properti",
                onOptionSelected = { newOption ->
                    onProTypeSelected(newOption)
                }
            )
            SelectDropdown(
                options = listingTypeOptions,
                selectedOption = selectedListingType,
                label = "Tipe Listing",
                onOptionSelected = { newOption ->
                    onListingTypeSelected(newOption)
                }
            )

            OutlinedTextField(
                modifier = Modifier.fillMaxWidth(),
                shape = RoundedCornerShape(6.dp),
                value = keyword,
                label = { Text(text = "Cari properti disini...") },
                onValueChange = { newKeyword ->
                    onKeywordChanged(newKeyword)
                }
            )
            PrimaryButton(
                title = "Cari",
                trailingIcon = Icons.Default.Search,
                onClick = onSearchClick
            )
        }
    }
}
